fix: #1520 - field value overflow on marketplace diff viewer

--- a/packages/marketplace/src/styles/blocks/diff-render-html.scss
+++ b/packages/marketplace/src/styles/blocks/diff-render-html.scss
@@ -46,5 +46,7 @@
 .diff-render-block {
   overflow-wrap: break-word;
   border-radius: 4px;
-  width: 50%;
+  // 4% space for arrow
+  width: 48%;
 }
+
